kong-core.yaml
# kong-core.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
spec:
  type: ClusterIP
  # externalIPs:
  #   - 193.136.82.36
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
  selector:
    app: kong

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      nodeSelector:
        kubernetes.io/hostname: kub12
      containers:
        - name: kong
          image: kong:3.6.1
          ports:
            - containerPort: 8000
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
