kong-postgres.yaml
# kong-postgres.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: kong-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: kong-postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-postgres
  template:
    metadata:
      labels:
        app: kong-postgres
    spec:
      nodeSelector:
        kubernetes.io/hostname: kub12
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/kong-postgres-data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: kong-postgres-pvc
